--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -16,8 +16,10 @@ USER 0
 
 # Copy cron and entrypoint from the installer stage
 COPY --from=installer /usr/sbin/cron /usr/sbin/cron
-COPY --from=installer /usr/sbin/crond /usr/sbin/crond 2>/dev/null || true
-COPY --from=installer /etc/cron* /etc/
+# Note: crond might not exist in Ubuntu, only copy if it exists
+RUN if [ -f /usr/sbin/crond ]; then cp /usr/sbin/crond /usr/sbin/crond-backup; fi
+COPY --from=installer /etc/cron.d /etc/cron.d
+COPY --from=installer /etc/crontab /etc/crontab
 COPY --from=installer /var/spool/cron /var/spool/cron
 COPY --from=installer /entrypoint.sh /entrypoint.sh
 
