--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,54 @@ x-file-healthcheck: &file_healthcheck_defaults
   timeout: "$HEALTHCHECK_FILE_TIMEOUT"
   retries: $HEALTHCHECK_FILE_RETRIES
   start_period: "$HEALTHCHECK_FILE_START_PERIOD"
+# Resource limit templates - Total: 13GB RAM, 4 CPUs
+x-critical-resources: &critical_resources
+  deploy:
+    resources:
+      limits:
+        memory: 4G
+        cpus: '1.5'
+      reservations:
+        memory: 2G
+        cpus: '0.5'
+x-high-resources: &high_resources
+  deploy:
+    resources:
+      limits:
+        memory: 2G
+        cpus: '0.75'
+      reservations:
+        memory: 1G
+        cpus: '0.25'
+x-medium-resources: &medium_resources
+  deploy:
+    resources:
+      limits:
+        memory: 1G
+        cpus: '0.5'
+      reservations:
+        memory: 512M
+        cpus: '0.1'
+x-low-resources: &low_resources
+  deploy:
+    resources:
+      limits:
+        memory: 256M
+        cpus: '0.25'
+      reservations:
+        memory: 128M
+        cpus: '0.05'
+x-micro-resources: &micro_resources
+  deploy:
+    resources:
+      limits:
+        memory: 128M
+        cpus: '0.1'
+      reservations:
+        memory: 64M
+        cpus: '0.02'
 x-sentry-defaults: &sentry_defaults
-  <<: [*restart_policy, *pull_policy]
+  <<: [*restart_policy, *pull_policy, *high_resources]
   image: sentry-self-hosted-local
   # Set the platform to build for linux/arm64 when needed on Apple silicon Macs.
   platform: ${DOCKER_PLATFORM:-}
@@ -75,7 +121,7 @@ x-sentry-defaults: &sentry_defaults
     - "./geoip:/geoip:ro"
     - "./certificates:/usr/local/share/ca-certificates:ro"
 x-snuba-defaults: &snuba_defaults
-  <<: *restart_policy
+  <<: [*restart_policy, *low_resources]
   depends_on:
     clickhouse:
       <<: *depends_on-healthy
@@ -100,7 +146,7 @@ x-snuba-defaults: &snuba_defaults
     SNUBA_STATSD_PORT: # Example value: 8125
 services:
   smtp:
-    <<: *restart_policy
+    <<: [*restart_policy, *micro_resources]
     image: registry.gitlab.com/egos-tech/smtp
     volumes:
       - "sentry-smtp:/var/spool/exim4"
@@ -108,7 +154,7 @@ services:
     environment:
       - MAILNAME=${SENTRY_MAIL_HOST:-}
   memcached:
-    <<: *restart_policy
+    <<: [*restart_policy, *low_resources]
     image: "memcached:1.6.26-alpine"
     command: ["-I", "${SENTRY_MAX_EXTERNAL_SOURCEMAP_SIZE:-1M}"]
     healthcheck:
@@ -116,7 +162,7 @@ services:
       # From: https://stackoverflow.com/a/31877626/5155484
       test: echo stats | nc 127.0.0.1 11211
   redis:
-    <<: *restart_policy
+    <<: [*restart_policy, *medium_resources]
     image: "redis:6.2.19-alpine"
     healthcheck:
       <<: *healthcheck_defaults
@@ -133,7 +179,7 @@ services:
         hard: 10032
     command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
   postgres:
-    <<: *restart_policy
+    <<: [*restart_policy, *medium_resources]
     # Using the same postgres version as Sentry dev for consistency purposes
     image: "postgres:14.19-bookworm"
     healthcheck:
@@ -147,7 +193,7 @@ services:
     volumes:
       - "sentry-postgres:/var/lib/postgresql/data"
   pgbouncer:
-    <<: *restart_policy
+    <<: [*restart_policy, *low_resources]
     image: "edoburu/pgbouncer:v1.24.1-p1"
     healthcheck:
       <<: *healthcheck_defaults
@@ -166,7 +212,7 @@ services:
       MAX_CLIENT_CONN: 10000
 
   kafka:
-    <<: *restart_policy
+    <<: [*restart_policy, *high_resources]
     image: "confluentinc/cp-kafka:7.6.6"
     environment:
       # https://docs.confluent.io/platform/current/installation/docker/config-reference.html#cp-kakfa-example
@@ -203,7 +249,7 @@ services:
       timeout: 10s
       retries: 30
   clickhouse:
-    <<: [*restart_policy, *pull_policy]
+    <<: [*restart_policy, *pull_policy, *critical_resources]
     image: clickhouse-self-hosted-local
     build:
       context: ./clickhouse
@@ -241,7 +287,7 @@ services:
       timeout: 10s
       retries: 30
   seaweedfs:
-    <<: *restart_policy
+    <<: [*restart_policy, *medium_resources]
     image: "chrislusf/seaweedfs:3.96_large_disk"
     entrypoint: "weed"
     command: >-
@@ -477,7 +523,7 @@ services:
     profiles:
       - feature-complete
   symbolicator:
-    <<: *restart_policy
+    <<: [*restart_policy, *low_resources]
     image: "$SYMBOLICATOR_IMAGE"
     volumes:
       - "sentry-symbolicator:/data"
@@ -691,7 +737,7 @@ services:
     entrypoint: "/entrypoint.sh"
     command: '"0 0 * * * gosu sentry sentry cleanup --days $SENTRY_EVENT_RETENTION_DAYS"'
   nginx:
-    <<: *restart_policy
+    <<: [*restart_policy, *low_resources]
     ports:
       - "$SENTRY_BIND:80/tcp"
     image: "nginx:1.29.1-alpine"
@@ -716,7 +762,7 @@ services:
         <<: *depends_on-healthy
         restart: true
   relay:
-    <<: *restart_policy
+    <<: [*restart_policy, *medium_resources]
     image: "$RELAY_IMAGE"
     volumes:
       - type: bind
@@ -738,7 +784,7 @@ services:
       <<: *healthcheck_defaults
       test: ["CMD", "/bin/relay", "healthcheck"]
   taskbroker:
-    <<: *restart_policy
+    <<: [*restart_policy, *low_resources]
     image: "$TASKBROKER_IMAGE"
     environment:
       TASKBROKER_KAFKA_CLUSTER: "kafka:9092"
@@ -758,7 +804,7 @@ services:
     healthcheck:
       <<: *file_healthcheck_defaults
   vroom:
-    <<: *restart_policy
+    <<: [*restart_policy, *low_resources]
     image: "$VROOM_IMAGE"
     environment:
       SENTRY_KAFKA_BROKERS_PROFILING: "kafka:9092"
